# ultramagnus

./: BUILD  BUILD.bazel  Dockerfile  README.md  WORKSPACE
bot/: BUILD.bazel  bot.go  methods.go  slash.go  types.go
cmd/: BUILD.bazel  main.go  methods.go  types.go
