load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bot.go",
        "methods.go",
        "types.go"
    ],
    deps = [
        "@com_github_robertgzr_joe_bolt_memory//:go_default_library",
        "@com_github_go_joe_joe//:go_default_library",
        "@com_github_go_joe_slack_adapter//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_nlopes_slack//:go_default_library",
    ],
    importpath = "github.com/r351574nc3/ultramagnus/bot",
    visibility = ["//visibility:public"],
)