load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "methods.go",
        "types.go"
    ],
    deps = [
        "//bot:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
    importpath = "github.com/r351574nc3/ultramagnus/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    deps = [],
    visibility = ["//visibility:public"],
)
